# PetCareButler

./: README.md  pyproject.toml
core/: settings.py  urls.py
dashboard/: services.py  urls.py  views.py
datahub/: services.py  urls.py  views.py
expenses/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py
pets/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py
photos/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py
planner/: admin.py  context_processors.py  forms.py  models.py  serializers.py  urls.py  views.py
planner/migrations/: 0001_initial.py
records/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
records/migrations/: 0001_initial.py
static/css/: styles.css
static/other/: D1.py  D2.py  D3.py  D4.py
templates/: base.html  home.html  navbar.html
templates/care/: record_delete.html  record_detail.html  record_form.html  record_list.html
templates/dashboard/: dashboard.html
templates/datahub/: adoptions.html  animal_protect_units.html  lost_notices.html  public_shelters.html
templates/expenses/: expense_confirm_delete.html  expense_form.html  expense_list.html
templates/pets/: pets_add.html  pets_delete.html  pets_detail.html  pets_edit.html  pets_list.html
templates/photos/: photo_delete.html  photo_detail.html  photo_edit.html  photo_list.html  upload_photos.html
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+16 files in other folders)
